--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,7 +6,7 @@ cell_height_scale = 1.0
 cell_width_scale = 1.0
 clickable_url = true
 dynamic_title = true
-font = fira-code 11
+font = Fira Mono 12
 #fullscreen = true
 icon_name = terminal
 mouse_autohide = false
@@ -41,44 +41,54 @@ modify_other_keys = false
 #scrollbar = off
 
 [colors]
+# Base16 Gruvbox dark, medium
+# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
 
-# special
-cursor 		= #a4d2aa
-foreground 	= #a4d2aa
-foreground_bold = #a4d2aa
-background 	= #0c120d
+foreground          = #d5c4a1
+foreground_bold     = #d5c4a1
+cursor              = #d5c4a1
+cursor_foreground   = #282828
+background          = #282828
 
-# black
-color0 	= #151e16
-color8 	= #61bb70
+# 16 color space
 
-# red
-color1 	= #1c271e
-color9 	= #57b7b7
+# Black, Gray, Silver, White
+color0  = #282828
+color8  = #665c54
+color7  = #d5c4a1
+color15 = #fbf1c7
 
-# green
-color2 	= #2a392c
-color10 = #3c9e4f
+# Red
+color1  = #fb4934
+color9  = #fb4934
 
-# yellow
-color3	= #3e5140
-color11	= #95b4ef
+# Green
+color2  = #b8bb26
+color10 = #b8bb26
 
-# blue
-color4 	= #567059
-color12	= #32a8a8
+# Yellow
+color3  = #fabd2f
+color11 = #fabd2f
 
-# magenta
-color5	= #739478
-color13	= #eba0e4
+# Blue
+color4  = #83a598
+color12 = #83a598
 
-# cyan
-color6	= #95bf9b
-color14	= #82acf5
+# Purple
+color5  = #d3869b
+color13 = #d3869b
 
-#white
-color7	= #c4ecc9
-color15	= #f49b9c
+# Teal
+color6  = #8ec07c
+color14 = #8ec07c
+
+# Extra colors
+color16 = #fe8019
+color17 = #d65d0e
+color18 = #3c3836
+color19 = #504945
+color20 = #bdae93
+color21 = #ebdbb2
 
 [hints]
 #font = Monospace 12
@@ -86,9 +96,9 @@ color15	= #f49b9c
 #background = #3f3f3f
 #active_foreground = #e68080
 #active_background = #3f3f3f
-padding = 10
-border = #3f3f3f
-border_width = 0.5
+#padding = 10
+#border = #3f3f3f
+#border_width = 0.5
 #roundness = 2.0
 
 # vim: ft=dosini cms=#%s
