--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,21 +6,21 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:fira-mono 11
+font pango:Fira Mono 12
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
 # hide window title bar
-for_window [class="^.*"] border pixel 6
+for_window [class="^.*"] border pixel 3
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #285577 #ffffff #2e9ef4   #3c9e4f
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #151e16
-client.unfocused        #333333 #222222 #888888 #292d2e   #a4d2aa
-client.urgent           #2f343a #900000 #ffffff #900000   #900000
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+client.focused          #4c7899 #285577 #ffffff #2e9ef4   #d5c4a1
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #1d2021
+client.unfocused        #333333 #222222 #888888 #292d2e   #1d2021
+client.urgent           #2f343a #900000 #ffffff #900000   #fb4934
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #1d2021
 
 client.background       #ffffff
 
