--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,5 +1,5 @@
 [colors]
-background = #fa1e213
+background = #000000
 foreground = #ebdbb2
 primary = #02c084
 secondary = #458588
@@ -13,8 +13,8 @@ width = 100%
 # offset-x = 5
 # offset-y = 5
 
-height = 27
-radius = 6.0
+height = 24
+radius = 0.0
 
 override-redirect = true
 ;wm-restack = i3
@@ -24,15 +24,15 @@ foreground = ${colors.foreground}
 
 padding-left = 1
 padding-right = 2
-module-margin-left = 2
+module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Hack Nerd Font:pixelsize=11:antialias=false;2.5
-font-1 = Hack Nerd Font:style=Regular:pixelsize=17:antialias=false;3
+font-0 = Fira Mono:pixelsize=10;2.5
+font-1 = Hack Nerd Font:style=Regular:pixelsize=12;3
 
 modules-left = i3
 modules-center = xwindow
-modules-right = alsa wlan battery date powermenu
+modules-right = alsa vpn wlan battery date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -63,17 +63,17 @@ wrapping-scroll = false
 reverse-scroll = false
 fuzzy-match = true
 
-ws-icon-default = "  "
-ws-icon-0 = "0;0  "
-ws-icon-1 = "1;%{T2}%{T-}  "
-ws-icon-2 = "2;%{T2}%{T-}  "
-ws-icon-3 = "3;  "
-ws-icon-4 = "4;4  "
-ws-icon-5 = "5;5  "
-ws-icon-6 = "6;6  "
-ws-icon-7 = "7;7  "
-ws-icon-8 = "8;  "
-ws-icon-9 = "9;  "
+ws-icon-default = " "
+ws-icon-0 = "0;0 "
+ws-icon-1 = "1;%{T2}1%{T-} "
+ws-icon-2 = "2;%{T2}2%{T-} "
+ws-icon-3 = "3;3 "
+ws-icon-4 = "4;4 "
+ws-icon-5 = "5;5 "
+ws-icon-6 = "6;6 "
+ws-icon-7 = "7;7 "
+ws-icon-8 = "8; "
+ws-icon-9 = "9; "
 
 format = <label-state>
 
@@ -94,23 +94,26 @@ label-urgent-foreground = ${colors.alert}
 label-urgent-padding = ${self.label-focused-padding}
 
 
-[module/xbacklight]
-type = internal/backlight
-card = intel_backlight
-
-format = <label>
-label = "  %percentage%%"
-label-foreground = ${colors.tertiary}
+[module/vpn]
+type = custom/script
+exec = $HOME/.config/polybar/scripts/vpn_module.sh
+click-left = $HOME/.config/polybar/scripts/vpn_module.sh --toggle-connection &
+click-right = $HOME/.config/polybar/scripts/vpn_module.sh --location-menu &
+click-middle = $HOME/.config/polybar/scripts/vpn_module.sh --ip_address &
+interval = 5
+format =  <label>
+format-foreground = ${colors.primary}
+# format-background = ${color.mb}
 
 
 [module/wlan]
 type = internal/network
-interface = wlan0
+interface = wlp3s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <label-connected>
 format-connected-underline = #9f78e1
-label-connected = "直"
+label-connected = "直 %{A1:nm-connection-editor:}%essid%%{A}"
 label-connected-foreground = ${colors.primary}
 
 format-disconnected = <label-disconnected>
@@ -143,10 +146,10 @@ label = %date%%time%
 [module/alsa]
 type = internal/alsa
 
-format-volume = <ramp-volume>
+format-volume = <ramp-volume> <label-volume>
 label-volume-foreground = ${colors.secondary}
 ramp-volume-foreground = ${colors.secondary}
-label-volume = 
+label-volume = %percentage%% 
 
 ramp-volume-0 = 
 ramp-volume-1 = 
@@ -158,7 +161,7 @@ label-muted-foreground = ${colors.secondary}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1
 adapter = AC
 full-at = 98
 
