--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,9 +1,9 @@
 [colors]
-background = #000000
+background = #111111
 foreground = #ebdbb2
-primary = #02c084
-secondary = #458588
-tertiary = #d07ef2
+primary = #b8bb26
+secondary = #83a598
+tertiary = #d3869b
 fourth = #fabd2f
 alert = #fb4934
 
@@ -65,8 +65,8 @@ fuzzy-match = true
 
 ws-icon-default = " "
 ws-icon-0 = "0;0 "
-ws-icon-1 = "1;%{T2}1%{T-} "
-ws-icon-2 = "2;%{T2}2%{T-} "
+ws-icon-1 = "1;1 "
+ws-icon-2 = "2;2 "
 ws-icon-3 = "3;3 "
 ws-icon-4 = "4;4 "
 ws-icon-5 = "5;5 "
@@ -82,11 +82,11 @@ label-focused-foreground = ${colors.fourth}
 label-focused-padding = 1
 
 label-unfocused = ${self.label-focused}
-label-unfocused-foreground = #0a7383
+label-unfocused-foreground = #458588
 label-unfocused-padding = ${self.label-focused-padding}
 
 label-visible = ${self.label-focused}
-label-visible-foreground = #0a7383
+label-visible-foreground = #458588
 label-visible-padding = ${self.label-focused-padding}
 
 label-urgent = ${self.label-focused}
@@ -101,7 +101,7 @@ click-left = $HOME/.config/polybar/scripts/vpn_module.sh --toggle-connection &
 click-right = $HOME/.config/polybar/scripts/vpn_module.sh --location-menu &
 click-middle = $HOME/.config/polybar/scripts/vpn_module.sh --ip_address &
 interval = 5
-format =  <label>
+format = <label>
 format-foreground = ${colors.primary}
 # format-background = ${color.mb}
 
