--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,7 +6,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Fira Mono 10
+font pango:Fira Mono Medium 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -16,11 +16,11 @@ font pango:Fira Mono 10
 for_window [class="^.*"] border pixel 2
 
 # class                 border  backgr. text    indicator child_border
-client.focused          #4c7899 #285577 #ffffff #2e9ef4   #d5c4a1
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #1d2021
-client.unfocused        #333333 #222222 #888888 #292d2e   #1d2021
-client.urgent           #2f343a #900000 #ffffff #900000   #fb4934
-client.placeholder      #000000 #0c0c0c #ffffff #000000   #1d2021
+client.focused          #d5c4a1 #285577 #ffffff #2e9ef4   #d5c4a1
+client.focused_inactive #1d2021 #5f676a #ffffff #484e50   #1d2021
+client.unfocused        #1d2021 #222222 #888888 #292d2e   #1d2021
+client.urgent           #fb4934 #900000 #ffffff #900000   #fb4934
+client.placeholder      #1d2021 #0c0c0c #ffffff #000000   #1d2021
 
 client.background       #ffffff
 
@@ -34,7 +34,7 @@ smart_borders on
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -42,10 +42,10 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 #set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% 
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% 
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle 
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle 
 #bindsym XF86AudioRaiseVolume exec "amixer -q sset Master,0 1+ unmute"
 #bindsym XF86AudioLowerVolume exec "amixer -q sset Master,0 1- unmute"
 #bindsym XF86AudioMute exec "amixer -q sset Master,0 toggle"
@@ -196,7 +196,10 @@ bindsym $mod+r mode "resize"
 #}
 
 # Keybind for i3lock i3lock
-bindsym $mod+shift+x exec i3lock
+bindsym $mod+shift+x exec i3lock -i ~/Wallpapers/groot-i-am-root-qhd-1920x1080.png
+
+# script that locks/suspends after inactivity
+exec_always --no-startup-id xautolock -detectsleep -time 5 -locker "i3lock -n -i ~/Wallpapers/groot-i-am-root-qhd-1920x1080.png" -killtime 10 -killer "systemctl suspend" &
 
 # polybar
 exec_always --no-startup-id ~/.config/polybar/launch.sh &
