--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,7 +6,7 @@ cell_height_scale = 1.0
 cell_width_scale = 1.0
 clickable_url = true
 dynamic_title = true
-font = Fira Mono 12
+font = Fira Mono Medium 14
 #fullscreen = true
 icon_name = terminal
 mouse_autohide = false
@@ -40,65 +40,42 @@ modify_other_keys = false
 # "off", "left" or "right"
 #scrollbar = off
 
+# https://github.com/morhetz/gruvbox-contrib/blob/master/termite/gruvbox-dark
 [colors]
-# Base16 Gruvbox dark, medium
-# Author: Dawid Kurek (dawikur@gmail.com), morhetz (https://github.com/morhetz/gruvbox)
+# hard contrast: background = #1d2021
+background = #282828
+# soft contrast: background = #32302f
+foreground = #ebdbb2
+foreground_bold = #ebdbb2
 
-foreground          = #d5c4a1
-foreground_bold     = #d5c4a1
-cursor              = #d5c4a1
-cursor_foreground   = #282828
-background          = #282828
+# dark0 + gray
+color0 = #282828
+color8 = #928374
 
-# 16 color space
+# neutral_red + bright_red
+color1 = #cc241d
+color9 = #fb4934
 
-# Black, Gray, Silver, White
-color0  = #282828
-color8  = #665c54
-color7  = #d5c4a1
-color15 = #fbf1c7
-
-# Red
-color1  = #fb4934
-color9  = #fb4934
-
-# Green
-color2  = #b8bb26
+# neutral_green + bright_green
+color2 = #98971a
 color10 = #b8bb26
 
-# Yellow
-color3  = #fabd2f
+# neutral_yellow + bright_yellow
+color3 = #d79921
 color11 = #fabd2f
 
-# Blue
-color4  = #83a598
+# neutral_blue + bright_blue
+color4 = #458588
 color12 = #83a598
 
-# Purple
-color5  = #d3869b
+# neutral_purple + bright_purple
+color5 = #b16286
 color13 = #d3869b
 
-# Teal
-color6  = #8ec07c
+# neutral_aqua + faded_aqua
+color6 = #689d6a
 color14 = #8ec07c
 
-# Extra colors
-color16 = #fe8019
-color17 = #d65d0e
-color18 = #3c3836
-color19 = #504945
-color20 = #bdae93
-color21 = #ebdbb2
-
-[hints]
-#font = Monospace 12
-#foreground = #dcdccc
-#background = #3f3f3f
-#active_foreground = #e68080
-#active_background = #3f3f3f
-#padding = 10
-#border = #3f3f3f
-#border_width = 0.5
-#roundness = 2.0
-
-# vim: ft=dosini cms=#%s
+# light4 + light1
+color7 = #a89984
+color15 = #ebdbb2
