Update vim with new plugins

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,3 +1,11 @@
 {
-	"diagnostic.displayByAle": true
+	"diagnostic.displayByAle": true,
+    "coc.preferences.formatOnSaveFiletypes": [
+        "javascript",
+        "javascriptreact",
+        "json",
+        "typescript",
+        "typescriptreact",
+        "typescript.tsx"
+    ]
 }
