Add css to list to format on save by coc-prettier

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -6,6 +6,7 @@
         "json",
         "typescript",
         "typescriptreact",
-        "typescript.tsx"
+        "typescript.tsx",
+        "css"
     ]
 }
