Update coc config for golang

--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,12 +1,20 @@
 {
 	"diagnostic.displayByAle": true,
-    "coc.preferences.formatOnSaveFiletypes": [
-        "javascript",
-        "javascriptreact",
-        "json",
-        "typescript",
-        "typescriptreact",
-        "typescript.tsx",
-        "css"
-    ]
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "javascriptreact",
+    "json",
+    "typescript",
+    "typescriptreact",
+    "typescript.tsx",
+    "css"
+  ],
+  "languageserver": {
+    "golang": {
+      "command": "gopls",
+      "rootPatterns": ["go.mod"],
+      "disableWorkspaceFolders": true,
+      "filetypes": ["go"]
+    }
+  }
 }
