--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -63,7 +63,7 @@ fade-out-step = 0.03; # Opacity change between steps while fading out. (default 
 ## Opacity
 opacity-rule = [
     "100:class_g    = 'firefox'",
-    "100:class_g    = 'alacritty'"
+    "90:class_g    = 'alacritty'"
 ];
 
 # Animation settings
@@ -80,7 +80,7 @@ wintypes:
   tooltip = { fade = true; full-shadow = true; opacity = 1; };
   dock = { full-shadow = true;};
   popup_menu = { opacity = 1; full-shadow = true; };
-  normal = {full-shadow = true;};
+  normal = {full-shadow = true; opacity = 0.9;};
   dropdown_menu = { opacity = 1; full-shadow = true; }
 };
 
