--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -62,8 +62,9 @@ fade-out-step = 0.03; # Opacity change between steps while fading out. (default 
 
 ## Opacity
 opacity-rule = [
-    "100:class_g    = 'firefox'",
-    "90:class_g    = 'alacritty'"
+    "100:class_g = 'firefox'",
+    "90:class_g = 'Alacritty' && focused",
+    "90:class_g = 'Alacritty' && !focused"
 ];
 
 # Animation settings
@@ -80,7 +81,7 @@ wintypes:
   tooltip = { fade = true; full-shadow = true; opacity = 1; };
   dock = { full-shadow = true;};
   popup_menu = { opacity = 1; full-shadow = true; };
-  normal = {full-shadow = true; opacity = 0.9;};
+  normal = {full-shadow = true;};
   dropdown_menu = { opacity = 1; full-shadow = true; }
 };
 
