fix nvimtree and whichkey

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@
 
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "xterm-256color" # colors!
+set -g default-terminal "tmux-256color" # colors!
 set-option -sa terminal-overrides ",xterm*:Tc"
 
 setw -g xterm-keys on
