--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -63,9 +63,21 @@ fade-out-step = 0.03; # Opacity change between steps while fading out. (default 
 ## Opacity
 opacity-rule = [
     "100:class_g = 'firefox'",
-    "90:class_g = 'Alacritty' && focused",
-    "90:class_g = 'Alacritty' && !focused"
+    "75:class_g = 'Alacritty' && focused",
+    "75:class_g = 'Alacritty' && !focused"
 ];
+
+## Blur
+blur-background = true
+blur-size = 12
+blur-background-frame = false
+blur-method = "dual_kawase"
+blur-background-fixed = false
+blur-background-exclude = [
+  "window_type = 'desktop'",
+  "class_g ?= 'ulauncher'",
+  "_GTK_FRAME_EXTENTS@:c"
+]
 
 # Animation settings
 transition-length = 300;
