--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -6,7 +6,6 @@ env:
   # check the local terminfo database and use `alacritty` if it is
   # available, otherwise `xterm-256color` is used.
   TERM: xterm-256color
-    
 
 window:
   # Blank space added around the window in pixels. This padding is scaled
@@ -34,19 +33,19 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: Fira Code Nerd Font
+    family: FiraCode Nerd Font Mono
     style: Medium
 
   bold:
-    family: Fira Code Nerd Font
+    family: FiraCode Nerd Font Mono
     style: Bold
 
   italic:
-    family: Fira Code Nerd Font
+    family: FiraCode Nerd Font Mono
     style: Italic
 
   bold_italic:
-    family: Fira Code Nerd Font
+    family: FiraCode Nerd Font Mono
     style: Bold Italic
 
   size: 10
@@ -57,53 +56,52 @@ font:
     x: 0
     y: 1
 
-
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
 # Colors (moonlight_ii_vscode)
 colors:
   primary:
-    background: '0x1e2030'
-    foreground: '0x7f85a3'
+    background: "0x1e2030"
+    foreground: "0x7f85a3"
 
   cursor:
-    text:   '0x7f85a3'
-    cursor: '0x808080'
-      
+    text: "0x7f85a3"
+    cursor: "0x808080"
+
   normal:
-    black:   '0x444a73'
-    red:     '0xff5370'
-    green:   '0x4fd6be'
-    yellow:  '0xffc777'
-    blue:    '0x3e68d7'
-    magenta: '0xfc7b7b'
-    cyan:    '0x86e1fc'
-    white:   '0xd0d0d0'
+    black: "0x444a73"
+    red: "0xff5370"
+    green: "0x4fd6be"
+    yellow: "0xffc777"
+    blue: "0x3e68d7"
+    magenta: "0xfc7b7b"
+    cyan: "0x86e1fc"
+    white: "0xd0d0d0"
 
   bright:
-    black:   '0x828bb8'
-    red:     '0xff98a4'
-    green:   '0xc3e88d'
-    yellow:  '0xffc777'
-    blue:    '0x82aaff'
-    magenta: '0xff966c'
-    cyan:    '0xb4f9f8'
-    white:   '0x5f8787'
-  
+    black: "0x828bb8"
+    red: "0xff98a4"
+    green: "0xc3e88d"
+    yellow: "0xffc777"
+    blue: "0x82aaff"
+    magenta: "0xff966c"
+    cyan: "0xb4f9f8"
+    white: "0x5f8787"
+
 window.opacity: 1.0
 
 key_bindings:
-    # (Windows, Linux, and BSD only)
-  - { key: V,              mods: Control|Shift, mode: ~Vi,        action: Paste            }
-  - { key: C,              mods: Control|Shift,                   action: Copy             }
-  - { key: F,              mods: Control|Shift, mode: ~Search,    action: SearchForward    }
-  - { key: B,              mods: Control|Shift, mode: ~Search,    action: SearchBackward   }
-  - { key: C,              mods: Control|Shift, mode: Vi|~Search, action: ClearSelection   }
-  - { key: Insert,         mods: Shift,                           action: PasteSelection   }
-  - { key: Key0,           mods: Control,                         action: ResetFontSize    }
-  - { key: Equals,         mods: Control,                         action: IncreaseFontSize }
-  - { key: Plus,           mods: Control,                         action: IncreaseFontSize }
-  - { key: NumpadAdd,      mods: Control,                         action: IncreaseFontSize }
-  - { key: Minus,          mods: Control,                         action: DecreaseFontSize }
-  - { key: NumpadSubtract, mods: Control,                         action: DecreaseFontSize }
+  # (Windows, Linux, and BSD only)
+  - { key: V, mods: Control|Shift, mode: ~Vi, action: Paste }
+  - { key: C, mods: Control|Shift, action: Copy }
+  - { key: F, mods: Control|Shift, mode: ~Search, action: SearchForward }
+  - { key: B, mods: Control|Shift, mode: ~Search, action: SearchBackward }
+  - { key: C, mods: Control|Shift, mode: Vi|~Search, action: ClearSelection }
+  - { key: Insert, mods: Shift, action: PasteSelection }
+  - { key: Key0, mods: Control, action: ResetFontSize }
+  - { key: Equals, mods: Control, action: IncreaseFontSize }
+  - { key: Plus, mods: Control, action: IncreaseFontSize }
+  - { key: NumpadAdd, mods: Control, action: IncreaseFontSize }
+  - { key: Minus, mods: Control, action: DecreaseFontSize }
+  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize }
