tmux almost there

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # -- general -------------------------------------------------------------------
 
 set -g default-terminal "xterm-256color" # colors!
-set-option -sa terminal-overrides ",xterm*:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set -g mouse on # enable mouse
 
@@ -88,23 +88,24 @@ if -b '[ -c /dev/clipboard ]' 'bind y run -b "tmux save-buffer - > /dev/clipboar
 # -- plugins -------------------------------------------------------------------
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux#v2.1.0' # See https://github.com/catppuccin/tmux/tags for additional tags
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
 
 # Configure specific module styles
-set -g @catppuccin_status_modules_right "application session battery"
 set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_modules_right_separator "rounded"
 set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_left_separator "█"
 
 # Window styles (keeping these non-rounded)
 set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_style "none"
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_window_default_text ' #W'
+set -g @catppuccin_window_current_text ' #W'
 
 # Load catppuccin
 run ~/.tmux/plugins/tmux/catppuccin.tmux
@@ -113,8 +114,9 @@ run ~/.tmux/plugins/tmux/catppuccin.tmux
 set -g status-right-length 100
 set -g status-left-length 100
 set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+set -gF  status-right "#{@catppuccin_status_directory}"
+set -agF status-right "#{@catppuccin_status_application}"
+set -agF status-right "#{@catppuccin_status_session}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
