much better tmux window titles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,11 +101,10 @@ set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_right_separator_inverse "no"
 set -g @catppuccin_status_left_separator "█"
 
-# Window styles (keeping these non-rounded)
+# Window styles
 set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_window_status_style "basic"
-set -g @catppuccin_window_default_text ' #W'
-set -g @catppuccin_window_current_text ' #W'
+set -g @catppuccin_window_text " #{s|^$HOME|~|:pane_current_path}"
+set -g @catppuccin_window_current_text " #{s|^$HOME|~|:pane_current_path}"
 
 # Load catppuccin
 run ~/.tmux/plugins/tmux/catppuccin.tmux
